--- a/assets/bulma/sass/utilities/derived-variables.sass
+++ b/assets/bulma/sass/utilities/derived-variables.sass
@@ -1,4 +1,5 @@
-$primary: $turquoise !default
+//$primary: $turquoise !default
+$primary: $test-primary !default
 
 $info: $cyan !default
 $success: $green !default
