--- a/assets/bulma/sass/utilities/initial-variables.sass
+++ b/assets/bulma/sass/utilities/initial-variables.sass
@@ -23,6 +23,9 @@ $blue:         hsl(217, 71%,  53%) !default
 $purple:       hsl(271, 100%, 71%) !default
 $red:          hsl(348, 100%, 61%) !default
 
+$test-primary: hsl(187, 62%,  66%) !default
+$test-secondary: hsl(12, 78%, 54%) !default
+
 // Typography
 
 $family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
