--- a/assets/fresh/partials/_buttons.scss
+++ b/assets/fresh/partials/_buttons.scss
@@ -38,8 +38,8 @@ Classes to change the feel of bulma buttons
 .button {
     &.primary-btn {
         outline: none;
-        border-color: $primary;
-        background-color: $primary;
+        border-color: $test-primary;
+        background-color: $test-primary;
         color: $white;
         transition: all 0.5s;
         &:hover {
@@ -61,8 +61,8 @@ Classes to change the feel of bulma buttons
     }
     &.secondary-btn {
         outline: none;
-        border-color: $secondary;
-        background-color: $secondary;
+        border-color: $test-secondary;
+        background-color: $test-secondary;
         color: $white;
         transition: all 0.5s;
         &:hover {
@@ -73,12 +73,12 @@ Classes to change the feel of bulma buttons
             opacity: 0.8;
         }
         &.btn-outlined {
-            border-color: $secondary;
-            color: $secondary;
+            border-color: $test-secondary;
+            color: $test-secondary;
             background-color: transparent; 
             &:hover {
                 color: $white;
-                background-color: $secondary;
+                background-color: $test-secondary;
             }
         }
     }
