--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,6 +11,12 @@
         <div class="footer-logo">
           <img src="{{ printf "/images/logos/%s" $logo | relURL }}">
         </div>
+        <div class="level-left">
+          ©2021 CornerCase
+        </div>
+        <div>
+          <a href=https://www.vecteezy.com/free-vector/software-testing>Software Testing Vectors by Vecteezy</a>
+        </div>
       </div>
       {{- range $quickLinks }}
         <div class="column">
