--- a/layouts/partials/section5.html
+++ b/layouts/partials/section5.html
@@ -1,32 +1,37 @@
-<section class="section section-light-grey is-medium">
+<section id="coming_soon" class="section section-light-grey is-medium">
   <div class="container">
-    <div class="title-wrapper has-text-centered">
-      <h2 class="title is-2 is-spaced">Drop us a line or two </h2>
-      <h3 class="subtitle is-5 is-muted">We'd love to hear from you</h3>
-      <div class="divider is-centered"></div>
+    <div class="title-wrapper-wide has-text-centered">
+      <h2 class="title is-2 is-spaced">Coming Soon!</h2>
+      <h3 class="subtitle is-5 is-muted">CornerCase is still under development.</h3>
+      <h3 class="subtitle is-5 is-muted">Sign up for our mailing list to be the first to know about announcements and updates. Be a part of the process as we build better quality assurance and test interviews.</h3>
     </div>
 
     <div class="content-wrapper">
       <div class="columns">
-        <div class="column is-6 is-offset-3">
-          <form>
-            <div class="columns is-multiline">
-              <div class="column is-6">
-                <input class="input is-medium" type="text" placeholder="Enter your name">
+        <div class="column is-6 is-offset-3">          
+          <div id="mc_embed_signup_footer">
+            <form action="https://cornercase.us20.list-manage.com/subscribe/post?u=e1a653240c6f640744a6f139b&amp;id=df9bff35b2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div class="columns is-multiline">
+                <div class="column is-12">
+                  <input type="email" value="" name="EMAIL" class="email input is-medium" id="mce-EMAIL" placeholder="Enter your email address" required>
+                </div>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                  <input type="text" name="b_e1a653240c6f640744a6f139b_df9bff35b2" tabindex="-1" value="">
+                </div>
+                <div class="form-footer has-text-centered mt-10">
+                  <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button cta is-large primary-btn raised is-clear">
+                  <p>Powered by <a href="http://eepurl.com/hMSAWf" title="Mailchimp - email marketing made easy and fun">Mailchimp</a></p>
+                </div>
               </div>
-              <div class="column is-6">
-                <input class="input is-medium" type="email" placeholder="Enter your email address">
-              </div>
-              <div class="column is-12">
-                <textarea class="textarea" rows="10" placeholder="Write someting..."></textarea>
-              </div>
-              <div class="form-footer has-text-centered mt-10">
-                <button class="button cta is-large primary-btn raised is-clear">Send Message</button>
-              </div>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
+    </div>
+    <div class="title-wrapper-wide has-text-centered">
+      <h3 class="subtitle is-5 is-muted">We won't use your email for anything other than communications about CornerCase. You can unsubscribe anytime.</h3>
+      <!-- <h3 class="subtitle is-5 is-muted">If you have any questions or concerns, you can email me directly at <a href="mailto:mike@cornercase.io">mike@cornercase.io</a>. Thank you!</h3> -->
     </div>
   </div>
 </section>
