--- a/layouts/partials/hero-body.html
+++ b/layouts/partials/hero-body.html
@@ -16,12 +16,32 @@
           {{ . }}
         </h2>
         {{ end }}
-        <p>
+        <!-- <p>
           <a class="button cta rounded primary-btn raised" href="{{ $buttonLink }}">
             {{ $buttonText }}
           </a>
-        </p>
+        </p> -->
+
+        <div id="mc_embed_signup_hero">
+          <form action="https://cornercase.us20.list-manage.com/subscribe/post?u=e1a653240c6f640744a6f139b&amp;id=df9bff35b2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div class="columns is-multiline">
+              <div class="column is-12">
+                <input type="email" value="" name="EMAIL" class="email input is-medium" id="mce-EMAIL" placeholder="Enter your email address" required>
+              </div>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                <input type="text" name="b_e1a653240c6f640744a6f139b_df9bff35b2" tabindex="-1" value="">
+              </div>
+              <div class="form-footer has-text-centered mt-10">
+                <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button cta is-large primary-btn raised is-clear">
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
+      <!-- 
+      <div class="column is-5 is-offset-1">
+      -->
       <div class="column is-5 is-offset-1">
         <figure class="image is-4by3">
           <img src="{{ printf "/images/%s" $image | relURL }}" alt="Description">
