--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -9,7 +9,7 @@
     <div class="navbar-brand">
       {{- if $navbarLogo}}
       <a class="navbar-item" href="{{ $navbarLogo.link }}">
-        <img src="{{ printf "/images/%s" $navbarLogo.image | relURL }}" alt="" width="112" height="28">
+        <img src="{{ printf "/images/%s" $navbarLogo.image | relURL }}" alt="" width="200" height="50">
       </a>
       {{- end}}
 
@@ -68,7 +68,7 @@
           </div>
           {{- else if .button }}
           <a href="{{ .url }}" class="navbar-item">
-            <span class="button signup-button rounded secondary-btn raised">
+            <span class="button signup-button rounded secondary-btn btn-outlined raised">
               {{ .title }}
             </span>
           </a>
