--- a/layouts/partials/section1.html
+++ b/layouts/partials/section1.html
@@ -4,9 +4,9 @@
 {{- $tiles    := index $section1 "tiles" }}
 <section class="section section-feature-grey is-medium">
   <div class="container">
-    <div class="title-wrapper has-text-centered">
+    <div class="title-wrapper-wide has-text-centered">
       <h2 class="title is-2">{{ $title }}</h2>
-      <h3 class="subtitle is-5 is-muted">{{ $subtitle }}</h3>
+      <h3 class="subtitle is-12 is-muted">{{ $subtitle }}</h3>
       <div class="divider is-centered"></div>
     </div>
 
@@ -24,9 +24,9 @@
             <div class="card-text">
                 <p>{{ .text }}</p>
             </div>
-            <div class="card-action">
+            <!-- <div class="card-action">
               <a href="{{ .url }}" class="button btn-align-md accent-btn raised">{{ .buttonText }}</a>
-            </div>
+            </div> -->
           </div>
         </div>
         {{- end }}
