--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,7 +15,7 @@
           ©2021 CornerCase
         </div>
         <div>
-          <a href=https://www.vecteezy.com/free-vector/software-testing>Software Testing Vectors by Vecteezy</a>
+          Hero Image Attribution: <a href=https://www.vecteezy.com/free-vector/software-testing>Software Testing Vectors by Vecteezy</a>
         </div>
       </div>
       {{- range $quickLinks }}
