--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -26,11 +26,11 @@
       </a>
       {{- end }}
 
-      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbar-menu">
+      <!-- <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbar-menu">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
-      </a>
+      </a> -->
     </div>
 
       <div id="navbar-menu" class="navbar-menu is-static">
