--- a/layouts/partials/section5.html
+++ b/layouts/partials/section5.html
@@ -2,8 +2,7 @@
   <div class="container">
     <div class="title-wrapper-wide has-text-centered">
       <h2 class="title is-2 is-spaced">Coming Soon!</h2>
-      <h3 class="subtitle is-5 is-muted">CornerCase is still under development.</h3>
-      <h3 class="subtitle is-5 is-muted">Sign up for our mailing list to be the first to know about announcements and updates. Be a part of the process as we build better quality assurance and test interviews.</h3>
+      <h3 class="subtitle is-5 is-muted">Sign up for our mailing list to be the first to know about announcements and updates.</h3>
     </div>
 
     <div class="content-wrapper">
@@ -30,7 +29,7 @@
       </div>
     </div>
     <div class="title-wrapper-wide has-text-centered">
-      <h3 class="subtitle is-5 is-muted">We won't use your email for anything other than communications about CornerCase. You can unsubscribe anytime.</h3>
+      <h3 class="subtitle is-5 is-muted">We won't use your email for anything other than communications about CornerCase. Unsubscribe anytime.</h3>
       <!-- <h3 class="subtitle is-5 is-muted">If you have any questions or concerns, you can email me directly at <a href="mailto:mike@cornercase.io">mike@cornercase.io</a>. Thank you!</h3> -->
     </div>
   </div>
