--- a/layouts/partials/hero-footer.html
+++ b/layouts/partials/hero-footer.html
@@ -13,5 +13,9 @@
         {{- end }}
       </ul>
     </div>
+    <div class="arrow-down">
+      <div class="left"></div>
+      <div class="right"></div>
+    </div>
   </div>
 </div>
