--- a/layouts/partials/section5.html
+++ b/layouts/partials/section5.html
@@ -1,4 +1,4 @@
-<section id="coming_soon" class="section section-light-grey is-medium">
+<section id="coming_soon" class="section section-light-grey">
   <div class="container">
     <div class="title-wrapper-wide has-text-centered">
       <h2 class="title is-2 is-spaced">Coming Soon!</h2>
